<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Countries</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_button_text">Add country</string>
    <string name="item_text">Country name</string>
    <string name="item_area">Area</string>
    <string name="item_population">Population</string>
    <string name="ok_button_text">OK</string>
    <string name="button_delSelected_text">Del selected</string>
    <string name="button_changeBackground_text">Change background</string>
    <string name="add_country_dialog_title">Add new country</string>
    <string name="filter_hint">Filter here</string>
    <string name="button_people_text">People</string>
    <string name="button_colors_text">Colors</string>
</resources>
