<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_background"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
    <LinearLayout
        android:id="@+id/topLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        <EditText
            android:id="@+id/filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/filter_hint"
            android:textColor="@color/item_text_color"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/start_colorsActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_colors_text"/>
        <Button
            android:id="@+id/start_peopleActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_people_text"/>
    </LinearLayout>
    <ListView
        android:id="@+id/listViewMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons"
        android:layout_below="@+id/topLL">
    </ListView>
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/addButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_button_text"/>
        <Button
            android:id="@+id/btnDelSelected"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_delSelected_text" />
        <Button
            android:id="@+id/btnChangeBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:text="@string/button_changeBackground_text"/>
    </LinearLayout>
</RelativeLayout>
